# Fundamentals-of-algorithmization-and-programming

./: README.md
1st semester/LR1/: CMakeLists.txt  Task_3.cpp
1st semester/LR2/Task_1/: main.cpp
1st semester/LR2/Task_10/: main.cpp
1st semester/LR2/Task_11/: main.cpp
1st semester/LR2/Task_12/: main.cpp
1st semester/LR2/Task_13/: main.cpp
1st semester/LR2/Task_2/: main.cpp
1st semester/LR2/Task_3/: main.cpp
1st semester/LR6/Task_1/: CMakeLists.txt  FindShortAndType.cpp  Header.h  Min.cpp  ZeroesAndOnesCheck.cpp  ZeroesAndOnesInput.cpp  main.cpp
1st semester/LR6/Task_2/: BufferInpur.cpp  CMakeLists.txt  Header.h  IntegerInput.cpp  Solve.cpp  StartAndEnd.cpp  StringInput.cpp  StringOutput.cpp  main.cpp
1st semester/LR6/Task_3/: ArraySolve.cpp  ArrayStringOutput.cpp  BufferInput.cpp  CMakeLists.txt  Fill.cpp  Header.h  NumberOfDigits.cpp  Solve.cpp  StringArrayInput.cpp  StringOutput.cpp  SymbolInput.cpp  SymbolOutput.cpp  main.cpp
Course work/: Course_work.pro  algorithmeditor.cpp  algorithmeditor.h  algorithmeditor.ui  coloringsolver.cpp  coloringsolver.h  connectivitysolver.cpp  connectivitysolver.h  edge.h  edgeeditor.cpp  edgeeditor.h  edgeeditor.ui  euleriansolver.cpp  euleriansolver.h  graph.h  isomorphismsolver.cpp  isomorphismsolver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matchingsolver.cpp  matchingsolver.h  maxflowsolver.cpp  maxflowsolver.h  mincostflowsolver.cpp  mincostflowsolver.h  minspanningforestsolver.cpp  minspanningforestsolver.h  mygraphicsscene.cpp  mygraphicsscene.h  myview.cpp  myview.h  myview.ui  shortestpathsolver.cpp  shortestpathsolver.h  vertex.h  vertexeditor.cpp  vertexeditor.h  vertexeditor.ui
(+274 files in other folders)
